syntax = "proto3";
package api.users;

option csharp_namespace = "Api.Users";

service UsersGrpc {
	rpc GetUsers(GetUserRequest) returns (GetUserReply);
}

message User {
	string id = 1;
	string name = 2;
	string email = 3;
}

message GetUserRequest {
}

message GetUserReply {
  repeated User users = 1;
}